added to list push code

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B8A2-Gamer-Zone</title>
+    <title>B8A2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,8 +34,7 @@
     </header>
 
 
-<!-- /* The header part is End */ -->
-<!-- /* The main section-1 is start */ -->
+
 
     <main>
         <section class="main-container">
@@ -64,14 +64,12 @@
             </div>
         </section>
 
-<!-- /* The main section-1 is End */ -->
-<!-- /* The main section-2 is start */ -->
+
+
+
 
         <section class="section-2-container">
-            <div class="section-2-container-left">
-                <img src="images/pngwing 4.png">
-            </div>
-        
+
             <div class="section-2-container-rigt">
                 <h1 class="section-2-title">We are game</h1>
                 <p class="section-2-paragraph">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
@@ -79,11 +77,13 @@
                 <p class="section-2-bottom">Our purpose.....</p>
                 <h3 class="section-2-bottom-line">“unleash the gamer in everyone”</h3>
             </div>
+
+            <div class="section-2-container-left">
+                <img src="images/pngwing 4.png">
+            </div>
         </section>
 
 
-<!-- The main section-2 is End -->
-<!-- The main section-3 is start -->
 
 
         <section class="section-3-container">
@@ -122,8 +122,6 @@
         </section>
 
 
-<!-- The main section-3 is End -->
-<!-- The main section-4 is start -->
 
 
         <section class="section-4-container">
@@ -140,62 +138,56 @@
         </section>
 
 
-<!-- The main section-4 is End -->
-<!-- The main section-5 is start -->
 
-
-        <section class="section-5">
-            <div class="section-5-container">
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 11.png">
-                    <li  class="section-6-title"><a href="#"></a>Adventure Games</li>
+        <section class="grid-section-5">
+            <div class="grid-5-container">
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 11.png">
+                    <li  class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 12.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 12.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 13.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 13.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 14.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 14.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 15.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 15.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
             </div>
 
-            <div class="section-5-container list-2">
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 16.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+            <div class="grid-5-container list-2">
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 16.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 17.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 17.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 18.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 18.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
-                <div class="items">
-                    <img class="grid-img" src="images/Rectangle 19.png">
-                    <li class="section-5-title"><a href="#"></a>Adventure Games</li>
+                <div class="grid-5-items">
+                    <img class="grid-5-img" src="images/Rectangle 19.png">
+                    <li class="grid-section-5-title"><a href="#"></a>Adventure Games</li>
                 </div>
             </div>
         </section>
     </main>
 
 
-<!-- The main section-5 is End -->
-<!-- The footer part is start -->
-
 
     <footer>
-        <div class="footer-container">
+             <div class="footer-container">
             <div class="footer-logo">
                 <img class="Frame-logo" src="images/Frame.png">
                 <h3 class="logo"><span class="logo-color">G</span>amer</h3>
